# deepx

./: .gitignore  Agents.md  Makefile  README.md
.claude/: CLAUDE.md  git.md  glossary.md  settings.json  settings.local.json
.claude/agents/: CLAUDE.md  audit-vm.md  dev-exop-metal.md  dev-heap-metal.md  dev-io-metal.md  dev-op-metal.md  dev-vm.md
.claude/commands/: CLAUDE.md  build-exop-metal.sh  build-heap-metal.sh  build-io-metal.sh  build-op-cuda.sh  build-op-metal.sh  build-vm.sh  reset-redis.sh  test-exop-metal.sh  test-op-metal.sh  test-vm.sh
.claude/hooks/: CLAUDE.md  block-dangerous-git.sh
.claude/skills/: CLAUDE.md  add-metal-kernel.md  debug-kvspace.md  debug-vthread.md  dual-opcode-audit.md
.github/workflows/: executor-heap-cuda.yml
doc/: .gitignore  README.md  codegen.md  design.md  index.rst  language.md
doc/bugs/: hardcode-audit.md
doc/deepx-core/: README.md
doc/deepxctl/: .gitignore  CLAUDE.md  README.md
doc/dxlang/: README.md  compiler-analysis-ssa-vs-arrow.md  control-flow.md  frontend-control-flow.md  spec-control-flow-v1.md
doc/executor/: deepx.op.drawio
doc/heap-plat/: README.md  heap-cpu.md  heap-cuda.md  heap-metal.md
doc/metaproc/: README.md  deepx-design.md  deepx-speed-strategy.md  dev-heap-plat.md  dev-op-plat.md  dev-pysdk.md  metaproc-datastruct.md  redis-keys.md  spec-v1.md
doc/op-plat/: README.md  contribute.md  exop-metal.md  mix-precision.md  op-cpu.md  op-cuda.md  op-metal.md
doc/op-plat/cpu/: contribute.md  op-list.md  range.md
doc/op-plat/cuda/: op-list.md
doc/plans/: CLAUDE.md  cpp-core-libs-integration.md  hardcode-audit.md  progress-2026-04-30.md
doc/plans/dashboard/: hardcode-audit.md  term-io-vm.md
doc/plans/deepx-core/: cpp-core-libs-integration.md  hardcode-audit.md  progress-2026-04-30.md
doc/plans/deepxctl-hardcode-audit/: README.md
doc/plans/hardcode-audit/: REPORT.md
doc/plans/vm-hardcode-fixes/: REPORT.md
doc/vm/: README.md  scheduler.md
docs/deepxIR/: deepxir.md
example/dxlang/call/: leaf.dx
example/dxlang/io/: print_tensor.dx
executor/: Makefile
executor/common-metal/: CMakeLists.txt  build.sh
executor/common-metal/include/deepx/: metal_device.hpp  registry.h
executor/common-metal/src/: metal_device.cpp
executor/common-metal/src/shmem/: shm_tensor.cpp
executor/deepx-core/: CMakeLists.txt
executor/deepx-core/include/deepx/: data_category.hpp  dtype.hpp  key_defs.h  precision.hpp  shape.hpp  shm_tensor.h  tensor.hpp  typespec.hpp
executor/deepx-core/include/deepx/tensor/: shape.hpp  tensor.hpp  tensor_base.hpp
executor/deepx-core/include/stdutil/: print.hpp
executor/deepx-core/include/tensorfunc/: matmul.hpp
executor/deepx-core/include/tf/: tf.hpp
executor/deepx-core/src/shmem/: shm_tensor.cpp
executor/deepx-core/src/stdutil/: fs.cpp  num.cpp  string.cpp
executor/deepx-core/src/tensor/: shape.cpp  shape_range.cpp
executor/deepx-core/src/tf/: tf.cpp  tffactory.cpp
executor/dxlang/: CMakeLists.txt  README.md
executor/dxlang/src/deepx/dtype/: typespec.hpp
executor/exop-cpu/: .cursorrules  CMakeLists.txt  Dockerfile  build.sh  dockerbuild.sh
executor/exop-cpu/src/client/: main.cpp  tfs.cpp  tfs.hpp
executor/exop-cpu/src/deepx/: dtype_cpu.hpp
executor/exop-cpu/src/deepx/mem/: mem_cpu.hpp
executor/exop-cpu/src/deepx/tensorfunc/: changeshape_miaobyte.hpp  elementwise_cblas.hpp  elementwise_miaobyte.hpp  init_miaobyte.hpp  io_miaobyte.hpp  matmul_cblas.hpp  matmul_miaobyte.hpp  reduce_miaobyte.hpp  tensorlife_miaobyte.hpp
executor/exop-cpu/src/deepx/tf/: arg.hpp  changeshape.hpp  elementwise.hpp  init.hpp  io.hpp  matmul.hpp  reduce.hpp  tensorlife.hpp
executor/exop-cpu/src/deepx/thread/: parallel.hpp
executor/exop-cpu/test/op/: 1_mem.cpp  CMakeLists.txt
executor/exop-cpu/test/tensorfunc/: 2_tensor_new.cpp  2_tensor_range.cpp  3_tensor_print.cpp  4_tensor_add.cpp  4_tensor_matmul.cpp  4_tensor_max.cpp  4_tensor_mul.cpp  4_tensor_sub.cpp  5_tensor_sum.cpp  6_tensor_broadcast.cpp  7_tensor_transpose.cpp  8_tensor_concat.cpp  CMakeLists.txt
executor/exop-metal/: CLAUDE.md  CMakeLists.txt  build.sh
executor/heap-cpu/: CMakeLists.txt  build.sh
executor/heap-cpu/src/: main.cpp
executor/heap-cpu/src/lifecycle/: lifecycle.cpp  lifecycle.h
executor/heap-cpu/src/registry/: registry_file.h
executor/heap-cuda/: CMakeLists.txt  README.md
executor/heap-cuda/src/: CMakeLists.txt
executor/heap-cuda/src/registry/: CMakeLists.txt  registry.cpp  registry.h
executor/heap-cuda/src/runtime/: lifecycle.cpp  lifecycle.h  sync.cpp  sync.h
executor/heap-cuda/test/: CMakeLists.txt
executor/heap-metal/: CMakeLists.txt  build.sh
executor/heap-metal/src/: main.cpp  main.mm
executor/heap-metal/src/lifecycle/: lifecycle.h
executor/io-metal/: CLAUDE.md  CMakeLists.txt  build.sh
executor/io-metal/src/: main.cpp
executor/old-cppcommon/: README.md  shape.cpp  shape.hpp  shape_changeshape.cpp  shape_changeshape.hpp  shape_matmul.cpp  shape_matmul.hpp  shape_range.cpp  shape_reduce.cpp  shape_reduce.hpp  shape_tensorinit.cpp  shape_tensorinit.hpp  tensor.hpp  tensorbase.hpp  vector_combination.cpp
executor/op-cuda/: CMakeLists.txt  build.sh
executor/op-metal/: CLAUDE.md  CMakeLists.txt  build.sh
executor/op-metal/src/client/: main.cpp
executor/op-metal/src/deepx/: dtype_metal.hpp  metal_context.cpp  metal_context.hpp
executor/op-metal/src/deepx/mem/: mem_metal.hpp
executor/op-metal/src/deepx/tensorfunc/: changeshape_miaobyte.hpp  elementwise_common.hpp  elementwise_miaobyte.hpp  init_miaobyte.hpp  io_miaobyte.hpp  metal_common.hpp  reduce_miaobyte.hpp  tensorlife_miaobyte.hpp
executor/op-metal/src/deepx/tf/: register_miaobyte.hpp
executor/op-metal/test/shm/: CMakeLists.txt  test_cross_process.cpp
executor/vm/: build.sh  cstyle_parse_test.go  dxlang_test.go  go.mod  ir_test.go  main.go  parse_dx_test.go  testhelpers_test.go
front/go/: go.mod
spec/: keys.yaml
tool/codegen/: go.mod  main.go
tool/dashboard/: CLAUDE.md  Makefile  go.mod  go.sum  main.go
tool/deepxctl/: go.mod  go.sum  main.go
tool/deepxctl/cmd/: boot.go  (+3 more)
(+231 files in other folders)
